# OxiShut

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix  shell.nix  style.css
.direnv/: flake-profile-1-link  flake-profile-2-link  flake-profile-3-link  flake-profile-4-link
.github/workflows/: rust.yml
nix/: default.nix  hm.nix
src/: main.rs
src/templates/: resources.gresource.xml
