[package]
name = "oxishut"
version = "0.1.0"
edition = "2021"
description = "A small logout prompt written in rust."
repository = "https://github.com/DashieTM/OxiShut"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories-next = "2.0.0"
gtk = { version = "0.6.6", package = "gtk4" }
gtk4-layer-shell = "0.0.3"
adw = { version = ">= 0.3.1", package = "libadwaita", features = ["v1_2"] }

[build-dependencies]
glib-build-tools = "0.18"
