[package]
name = "oxishut"
version = "0.1.0"
edition = "2024"
description = "A small logout prompt written in rust."
repository = "https://github.com/DashieTM/OxiShut"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oxiced = "0.5.0"
iced = { version = "0.13.1", features = ["advanced", "canvas", "image", "svg"] }
iced_layershell = "0.12.0"
