[package]
name = "oxishut"
version = "0.1.0"
edition = "2024"
description = "A small logout prompt written in rust."
repository = "https://github.com/DashieTM/OxiShut"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oxiced = { git = "https://github.com/Xetibo/oxiced", branch = "iced14" }
iced = { version = "0.14.0-dev", features = [
	"advanced",
	"canvas",
	"image",
	"svg",
	"tokio",
], git = "https://github.com/iced-rs/iced" }
iced_layershell = { version = "0.14.0-dev", git = "https://github.com/waycrate/exwlshelleventloop" }
